// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaWidget simple with errors 1`] = `
<div
  className="flex p-0.5"
>
  <textarea
    aria-describedby="_id__error _id__description _id__help"
    autoFocus={true}
    className="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without errors 1`] = `
<div
  className="flex p-0.5"
>
  <textarea
    aria-describedby="_id__error _id__description _id__help"
    autoFocus={true}
    className="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without required 1`] = `
<div
  className="flex p-0.5"
>
  <textarea
    aria-describedby="_id__error _id__description _id__help"
    autoFocus={true}
    className="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={false}
    rows={5}
    value="value"
  />
</div>
`;
